--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
         "rilwis/meta-box": "dev-master",
         "alterfw/php-form-generator": "dev-master",
         "alterfw/wordpress-for-developers": "dev-master"
+    },
+    "autoload": {
+        "files": ["core/main.php"]
     }
 }
 
