--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "minimum-stability": "dev",
     "autoload": {
-        "files": ["core/main.php"]
+        "files": ["src/main.php"]
     }
 }
 
