--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
     ],    
     "require": {
         "rilwis/meta-box": "dev-master",
-        "alterfw/php-form-generator": "0.1.x",
         "alterfw/wordpress-for-developers": "0.1.x"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*"
     },
     "minimum-stability": "dev",
     "autoload": {
