--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,8 @@ before_script:
     - export PLUGIN_SLUG=$(basename $(pwd))
     - git clone --depth=50 --branch="$WP_VERSION" git://develop.git.wordpress.org/ /tmp/wordpress
     - cd ..
-    - git clone https://github.com/alterfw/example-theme.git example-theme-master
+    - wget https://github.com/alterfw/example-theme/archive/master.tar.gz
+    - tar xzvf master.tar.gz
     - mv "example-theme-master" "/tmp/wordpress/src/wp-content/themes/"
     - cd /tmp/wordpress/src/wp-content/themes/example-theme-master
     - wget http://getcomposer.org/composer.phar -O composer.phar
