--- a/.travis.yml
+++ b/.travis.yml
@@ -41,10 +41,9 @@ before_script:
     - wget https://github.com/alterfw/example-theme/archive/master.tar.gz
     - tar xzvf master.tar.gz
     - mv "example-theme-master" "/tmp/wordpress/src/wp-content/themes/"
-    - cd /tmp/wordpress/src/wp-content/themes/example-theme-master
-    - wget http://getcomposer.org/composer.phar -O composer.phar
-    - php composer.phar install
-    - rm -rf vendor/alterfw/alter
+    - wget http://getcomposer.org/composer.phar -O /tmp/wordpress/src/wp-content/themes/example-theme-master/composer.phar
+    - php /tmp/wordpress/src/wp-content/themes/example-theme-master/composer.phar install
+    - rm -rf /tmp/wordpress/src/wp-content/themes/example-theme-master/vendor/alterfw/alter
     - mv "$PLUGIN_SLUG" "/tmp/wordpress/src/wp-content/themes/example-theme-master/vendor/alterfw/alter"
     - cd /tmp/wordpress
     - mysql -e "CREATE DATABASE wordpress_tests;" -uroot
