--- a/.travis.yml
+++ b/.travis.yml
@@ -37,22 +37,23 @@ matrix:
 before_script:
     - export PLUGIN_SLUG=$(basename $(pwd))
     - git clone --depth=50 --branch="$WP_VERSION" git://develop.git.wordpress.org/ /tmp/wordpress
+    - cp /tmp/wordpress/src /vagrant/wordpress
     - cd ..
     - wget https://github.com/alterfw/example-theme/archive/master.tar.gz
     - tar xzvf master.tar.gz
-    - mv "example-theme-master" "/tmp/wordpress/src/wp-content/themes/"
-    - cd /tmp/wordpress/src/wp-content/themes/example-theme-master
+    - mv "example-theme-master" "/vagrant/wordpress/wp-content/themes/"
+    - cd /vagrant/wordpress/wp-content/themes/example-theme-master
     - composer install
     - rm -rf vendor/alterfw/alter
     - cd /home/travis/build/alterfw
-    - mv "$PLUGIN_SLUG" "/tmp/wordpress/src/wp-content/themes/example-theme-master/vendor/alterfw/alter"
-    - cd /tmp/wordpress
+    - mv "$PLUGIN_SLUG" "/vagrant/wordpress/src/wp-content/themes/example-theme-master/vendor/alterfw/alter"
+    - cd /vagrant/wordpress
     - mysql -e "CREATE DATABASE wordpress_tests;" -uroot
-    - cp wp-tests-config-sample.php wp-tests-config.php
+    - cp /tmp/wordpress/src/wp-tests-config-sample.php /vagrant/wordpress/wp-tests-config.php
     - sed -i "s/youremptytestdbnamehere/wordpress_tests/" wp-tests-config.php
     - sed -i "s/sergiovilar/travis/" wp-tests-config.php
     - sed -i "s/zEbUtawSJyxARz6WVL4h//" wp-tests-config.php
     - ls
-    - cd /tmp/wordpress/src/wp-content/themes/example-theme-master/vendor/alterfw/alter
+    - cd /vagrant/wordpress/src/wp-content/themes/example-theme-master/vendor/alterfw/alter
 
 script: phpunit
