--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ matrix:
 before_script:
     - export PLUGIN_SLUG=$(basename $(pwd))
     - git clone --depth=50 --branch="$WP_VERSION" git://develop.git.wordpress.org/ /tmp/wordpress
-    - cp /tmp/wordpress/src /vagrant/wordpress
+    - cp -R /tmp/wordpress/src /vagrant/wordpress
     - cd ..
     - wget https://github.com/alterfw/example-theme/archive/master.tar.gz
     - tar xzvf master.tar.gz
