--- a/.travis.yml
+++ b/.travis.yml
@@ -51,8 +51,8 @@ before_script:
     - mysql -e "CREATE DATABASE wordpress_tests;" -uroot
     - cp wp-tests-config-sample.php wp-tests-config.php
     - sed -i "s/youremptytestdbnamehere/wordpress_tests/" wp-tests-config.php
-    - sed -i "s/yourusernamehere/travis/" wp-tests-config.php
-    - sed -i "s/yourpasswordhere/~/" wp-tests-config.php
+    - sed -i "s/yourusernamehere/root/" wp-tests-config.php
+    - sed -i "s/yourpasswordhere//" wp-tests-config.php
     - cat wp-tests-config.php
     - ls
     - cd /tmp/wordpress/src/wp-content/themes/example-theme-master/vendor/alterfw/alter
