--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         }
     ],    
     "require": {
-        "alterfw/meta-box": "dev-master",
-        "alterfw/wordpress-for-developers": "dev-master"
+        "alterfw/hero": "^0.2.0",
+        "alterfw/options-page": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
@@ -20,4 +20,3 @@
         "files": ["src/main.php"]
     }
 }
-
