Change container names

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
-alter_wp:
+wordpress:
   image: wordpress
   links:
-    - alter_db:mysql
+    - database:mysql
   ports:
     - 8080:80
   working_dir: /var/www/html
   volumes:
    - .:/var/www/html/wp-content/themes/development/
 
-alter_db:
+database:
   image: mariadb
   environment:
     MYSQL_ROOT_PASSWORD: example
